--- a/Semana06/Semana06-02.ipynb
+++ b/Semana06/Semana06-02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92d61d28",
+   "id": "931e0e89",
    "metadata": {},
    "source": [
     "# Semana 06\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8c69ca7",
+   "id": "66d80fa3",
    "metadata": {},
    "source": [
     "Tema: Funciones"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "858cc206",
+   "id": "7efe1edc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1fd12fba",
+   "id": "a4e3b0de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "238967b6",
+   "id": "910f9fc9",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "661a582a",
+   "id": "4ddcfb88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7958f120",
+   "id": "3958f902",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9547ea8f",
+   "id": "7c99da3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ab151302",
+   "id": "c688e808",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "78b4d930",
+   "id": "c2e93895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b61350ec",
+   "id": "3b0a7d0b",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ed8c9931",
+   "id": "bbd989d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e07ee9b3",
+   "id": "f8572180",
    "metadata": {},
    "outputs": [
     {
@@ -210,8 +210,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "e208eade",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "factorial2(5)+20"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8f81f6a8",
+   "id": "d0b19192",
    "metadata": {},
    "outputs": [],
    "source": []
