--- a/Semana06/Semana06-03.ipynb
+++ b/Semana06/Semana06-03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4252eba3",
+   "id": "1afd4406",
    "metadata": {},
    "source": [
     "# SEMANA06\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedf42b0",
+   "id": "d9592637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aa398a9c",
+   "id": "9ee88723",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "33eb0b81",
+   "id": "4318b55c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cc3eff9d",
+   "id": "100f40d8",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2e17a5b4",
+   "id": "f8c46997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8da0856a",
+   "id": "37c2ee3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b30b1de",
+   "id": "546aa3b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b8935bd7",
+   "id": "80c482a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c2d52705",
+   "id": "697deeae",
    "metadata": {},
    "outputs": [
     {
@@ -164,16 +164,9 @@
     }
    ],
    "source": [
-    "# Mostramos los datos completos del curso, ejecutando curso1.mostrar_datos_curso();"
+    "# Mostramos los datos completos del curso, ejecutando el método mostrar_datos_curso()\n",
+    "curso1.mostrar_datos_curso();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "359bf417",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
